   and removed the "$uname" special key. (Thanks Evan)
 - *luksswaphookcfg* has been converted to a C++ module.
 - *networkcfg* could fail to update the NetworkManager configuration
   if the SSID or username contained non-ASCII characters **and** the
   default Python text-file encoding was set to ASCII. The files are
   now read and written in UTF-8, explicitly. #1848
 - *preservefiles* was missing some necessary features, needed for it
   to replace the deprecated log-file-saving functionality in the *umount*
   module. (Thanks Erik and Joe for testing) #1851
 - *umount* is now marked as an emergency module in the example configuration,
   since it should **probably** be run as a cleanup. (Thanks Evan)


# 3.2.49.1 (2021-12-11) #

This is a hot-fix release, to fix a regression in the calculation of
swap-size. Reported by EndeavourOS (Joe Kamprad) and Xero Linux.


# 3.2.49 (2021-12-10) #

This release contains contributions from (alphabetically by first name):
 - Artem Grinev
 - Evan James

Distributions are **specifically** reminded to update the *umount* module
configuration (and to use *preservefiles* if needed).

## Core ##
 - Errors (e.g. when an installation fails for whatever reason) are displayed
   in a dialog with a scrollable details panel, rather than growing up
   to the size of the screen. (Thanks Artem)

## Modules ##
 - *bootloader* better supports multiple installations of the same OS.
 - *mount* supports btrfs subvolumes on subdirectories of / now.
 - *partition* now supports "deep" btrfs subvolume names, e.g. a
   separate subvolume for `/usr/local`. (Thanks Evan)
 - The *umount* module now warns if the "preserve log file" feature is used.
   This has been deprecated for a long time: use the *preservefiles* module
   instead. A future release will turn this into an error.


# 3.2.48 (2021-12-03) #

This release contains contributions from (alphabetically by first name):
 - Evan James

## Core ##